--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-                        <h1 class="mb-5 mx-5 text-center">EL TÍTULO DE SU INFOGRAFÍA DIGITAL</h1>
+                        <h1 class="mb-5 mx-5 text-center">Un recorrido por Space-X</h1>
 
-                        <h2 class="my-5 text-center">SUBTÍTULO</h2>
+                        <h2 class="my-5 text-center">El juguete espacial del magnate Elon Musk</h2>
 
                         <p class="lead text-center">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu lectus congue, lobortis lacus nec, dapibus magna. Maecenas nec faucibus nunc, quis egestas urna. Vivamus congue pretium nisi, ut facilisis erat posuere vitae. Vivamus ut hendrerit turpis. Integer mattis justo lectus, nec efficitur orci vehicula a. Praesent varius in leo eu feugiat.
