--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu lectus congue, lobortis lacus nec, dapibus magna. Maecenas nec faucibus nunc, quis egestas urna. Vivamus congue pretium nisi, ut facilisis erat posuere vitae. Vivamus ut hendrerit turpis. Integer mattis justo lectus, nec efficitur orci vehicula a. Praesent varius in leo eu feugiat.
                         </p>
 
-                        <img src="assets/imagen-otra.png" class="w-100 my-3" />
+                        <img src="img/imagen-otra.png" class="w-100 my-3" />
 
                     </div>
                 </div>
@@ -75,7 +75,7 @@
             </div>
             <div id="franja">
                 <div>
-                    <img src="assets/imagen-ancho.png" class="w-100">
+                    <img src="img/imagen-ancho.png" class="w-100">
                 </div>
             </div>
         </section>
@@ -92,12 +92,12 @@
                     </div>
                 </div>
             </div>
-            <img src="assets/imagen-otra.png" class="w-100 my-3" />
+            <img src="img/imagen-otra.png" class="w-100 my-3" />
              <div class="container">
                 <div class="row">
                     <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
            
-            <img src="assets/imagen-otra.png" class="w-100 my-3" />
+            <img src="img/imagen-otra.png" class="w-100 my-3" />
         </div>
     </div></div>
 </section>
@@ -116,7 +116,7 @@
                 </div>
 </div>
 
-                <img src="assets/imagen-otra.png" class="w-100 my-3" />
+                <img src="img/imagen-otra.png" class="w-100 my-3" />
 </section>
 
         <section id="reutilizacion">
@@ -131,7 +131,7 @@
                 </div>
 </div>
 
-                <img src="assets/imagen-otra.png" class="w-100 my-3" />
+                <img src="img/imagen-otra.png" class="w-100 my-3" />
 </section>   
 
         <section id="starship">
@@ -143,9 +143,9 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu lectus congue, lobortis lacus nec, dapibus magna. Maecenas nec faucibus nunc, quis egestas urna. Vivamus congue pretium nisi, ut facilisis erat posuere vitae. Vivamus ut hendrerit turpis. Integer mattis justo lectus, nec efficitur orci vehicula a. Praesent varius in leo eu feugiat.
                         </p>
                     
-                <img src="assets/imagen-otra.png" class="w-100 my-3" />
+                <img src="img/imagen-otra.png" class="w-100 my-3" />
 
-                <img src="assets/imagen-otra.png" class="w-100 my-3" />
+                <img src="img/imagen-otra.png" class="w-100 my-3" />
 
 
                     </div>
@@ -175,7 +175,7 @@
                 </div>
 </div>
 
-                <img src="assets/imagen-otra.png" class="w-100 my-3" />
+                <img src="img/imagen-otra.png" class="w-100 my-3" />
 
 
 </section> 
