--- a/index.html
+++ b/index.html
@@ -90,16 +90,14 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu lectus congue, lobortis lacus nec, dapibus magna. Maecenas nec faucibus nunc, quis egestas urna. Vivamus congue pretium nisi, ut facilisis erat posuere vitae. Vivamus ut hendrerit turpis. Integer mattis justo lectus, nec efficitur orci vehicula a. Praesent varius in leo eu feugiat.
                         </p>
                     </div>
+                    <div class="col-12 mx-auto">
+                         <img src="img/grafico3.svg" class="w-100 my-3" />
+                    </div>
+                    <div class="col-md-11 col-lg-10 col-xl-9 col-xxl-8 mx-auto">
+                        <img src="img/grafico4.svg" class="w-100 my-3" />
+                    </div>
                 </div>
             </div>
-            <img src="img/grafico3.svg" class="w-100 my-3" />
-             <div class="container">
-                <div class="row">
-                    <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-           
-            <img src="img/grafico4.svg" class="w-100 my-3" />
-        </div>
-    </div></div>
 </section>
 
 
