--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-                        <h3 class="text-center mt-5">CUARTO SUBTÍTULO: COLONIZACIÓN DE MARTE</h3>
+                        <h3 class="text-center mt-5">CUARTO SUBTÍTULO: UNA IDEA DE OTRO MUNDO</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu lectus congue, lobortis lacus nec, dapibus magna. Maecenas nec faucibus nunc, quis egestas urna. Vivamus congue pretium nisi, ut facilisis erat posuere vitae. Vivamus ut hendrerit turpis. Integer mattis justo lectus, nec efficitur orci vehicula a. Praesent varius in leo eu feugiat.
                         </p>
