--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             #franja div{
 
                  width:2000px; 
-                 height:400px; 
+                 height:400px;  
+                 background:black;
             }
 
         </style>
@@ -90,7 +91,7 @@
                         </p>
                     </div>
                     <div class="col-12 mx-auto">
-                         <img src="img/grafico34.svg" class="w-100 my-3" />
+                         <img src="img/grafico3.svg" class="w-100 my-3" />
                     </div>
                 </div>
             </div>
