--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 }
             }
             body{
-                background:linear-gradient(#030E1F, #042667);
+                background:linear-gradient(#020811, #042667);
             }
             header{
                 padding-top:25vh;
