--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <h2 class="my-5 text-center">EL JUGUETE ESPACIAL DEL MAGNATE ELON MUSK</h2>
 
                         <p class="lead text-center">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu lectus congue, lobortis lacus nec, dapibus magna. Maecenas nec faucibus nunc, quis egestas urna. Vivamus congue pretium nisi, ut facilisis erat posuere vitae. Vivamus ut hendrerit turpis. Integer mattis justo lectus, nec efficitur orci vehicula a. Praesent varius in leo eu feugiat.
+                            Elon Musk, cuya fortuna puede ser comparada al PIB de Perú, espera que para el año 2100 Marte tenga al menos a unos mil humanos habitando el planeta. 
                         </p>
 
                         <img src="img/grafico1.svg" class="w-100 my-3" />
